# CS216-rainshader

./: .gitignore  CMakeLists.txt  README.md  particles.h  rain_simulator.c  shaders_basic_pbr.c  texturemanager.h
compose_texture/: compose.py
shaders/: rain.fs  rain.vs
